_sass/minima/_content.scss
/* ... */
// Papers
.pubgroup {
    margin: 0 0 $spacing-unit * 2 0;
    border-radius: $surface-radius;
    background-color: rgba($pill-color, 0.45);
    overflow: hidden;
}

.pubcard {
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: $spacing-unit * 2;
    background-color: #ffffff;
    position: relative;
}

.pubcard + .pubcard::before {
    content: "";
    position: absolute;
    top: 0;
    left: calc(28% + #{$spacing-unit * 0.9} + #{$spacing-unit * 1.1});
    right: $spacing-unit * 1.1;
    height: 1px;
    background-color: $border-color-01;
}

.pubcard .publeft {
    width: 28%;
    padding-right: $spacing-unit * 0.9;
    justify-items: center;
    justify-content: center;
    align-items: center;
    display: flex;
}

.pubcard .pubright {
    padding-left: $spacing-unit;
    display: flex;
    flex-direction: column;
    gap: $spacing-unit / 3;
    width: 70%;
    text-align: left;
    align-items: start;
    justify-content: center;
}

.pubcard .publication {
    display: block;
    font-size: $base-font-size * 1.15;
    line-height: 1.35;
}

.pubcard .authors,
.pubcard .venue-line,
.pubcard .pill {
    font-size: $base-font-size;
    line-height: 1.35;
}

.pubcard .venue-line,
.pubcard .venue-line .decor {
    font-size: $base-font-size;
}

.pubcard .authors,
.pubcard .venue-line {
    margin: 0;
}

.pub-actions {
    display: flex;
    flex-wrap: wrap;
    gap: $spacing-unit * 0.65 $spacing-unit * 1.15;
    margin-top: $spacing-unit * 0.75;
}

.pc-profile {
    width: 100%;
    border-radius: 0;
}

.pubcard .pill {
    font-weight: 400;
    margin: 0;
    line-height: 1.5;
    padding-top: $spacing-unit * 0.2;
    padding-bottom: $spacing-unit * 0.2;
    padding-left: $spacing-unit * 1.15;
    padding-right: $spacing-unit * 1.15;
}

@media only screen and (max-width: $on-palm) {
    .pubcard {
        display: flex;
        flex-direction: column;
        padding: $spacing-unit * 2;
    }

    .pubcard .publeft,
    .pubcard .pubright {
        width: 100%;
        margin: 0%;
        padding: 0%;
    }

    .pubcard .publeft {
        text-align: center;
        padding-bottom: $spacing-unit;
        padding-right: 0;
    }

    .pubcard + .pubcard::before {
        left: $spacing-unit;
        right: $spacing-unit;
    }

    .pubcard .pubright {
        text-align: left;
        margin: 0%;
        border-radius: 0px;
    }

    .pc-profile {
        min-width: 160px;
        width: 100%;
    }
}

@media (prefers-color-scheme: dark) {
    .pubcard {
        background-color: #18181b;
    }

    .pubcard + .pubcard::before {
        background-color: #3f3f46;
    }
}

// cards
.awards {
    margin: 0 0 $spacing-unit * 2 0;
    border-radius: $surface-radius;
    background-color: rgba($pill-color, 0.45);
    overflow: hidden;
}

.awards .awardcard {
    margin: 0;
    padding: $spacing-unit * 2;
    background-color: #ffffff;
    justify-items: center;
    width: 100%;
    position: relative;
}

.awards .awardcard + .awardcard::before {
    content: "";
    position: absolute;
    top: 0;
    left: $spacing-unit * 2;
    right: $spacing-unit * 2;
    height: 1px;
    background-color: $border-color-01;
}

@media only screen and (max-width: $on-palm) {
    .awards .awardcard {
        padding: $spacing-unit * 2;
    }

    .awards .awardcard + .awardcard::before {
        left: $spacing-unit * 2;
        right: $spacing-unit * 2;
    }
}

@media (prefers-color-scheme: dark) {
    .awards .awardcard {
        background-color: #18181b;
    }

    .awards .awardcard + .awardcard::before {
        background-color: #3f3f46;
    }
}


.awardname,
.awarder {
    text-align: left;
    text-justify: left;
    width: 100%;
    margin: 0px;
}

.awarder {
    color: $light-text-color;
    font-weight: 400;
    font-size: $base-font-size;
    line-height: 1.35;
}

.award-kicker {
    color: $venue-color;
    font-weight: bold;
    font-style: italic;
    font-size: $base-font-size;
    line-height: 1.35;
    margin: 0 0 $spacing-unit / 6 0;
}

.teaching-terms {
    display: flex;
    flex-wrap: wrap;
    gap: $spacing-unit * 0.65 $spacing-unit * 1.15;
    margin-top: $spacing-unit * 0.75;
}

.teaching-terms .pill {
    margin: 0;
    line-height: 1.5;
    padding-top: $spacing-unit * 0.2;
    padding-bottom: $spacing-unit * 0.2;
    padding-left: $spacing-unit * 1.15;
    padding-right: $spacing-unit * 1.15;
}


hr.cardiv {
    height: 2px;
    border-width: 0;
    color: $light-text-color;
    background-color: $light-text-color;
    margin-top: calc(#{$spacing-unit});
    margin-bottom: calc(#{$spacing-unit});
}

hr.pagediv {
    margin-top: calc(#{$spacing-unit} * 2);
    margin-bottom: calc(#{$spacing-unit} * 2);
    height: 2px;
    border-width: 0;
    color: $light-text-color;
    background-color: $light-text-color;
}


a.footer_link {
    text-decoration: none;
    color: inherit;

    &:visited {
        color: inherit;
    }

    &:hover {
        text-decoration: underline;
    }
}

.venue-line {
    color: $venue-color;
    margin: 0px;
    font-weight: bold;
    font-style: italic;
}



a.publication,
a.award,
a.classname {
    color: $text-color;
    text-decoration: none;
    font-weight: bold;

    &:visited {
        color: $text-color;
    }

    &:hover {
        color: $text-color;
        text-decoration: underline;
    }

    .social-media-list &:hover {
        text-decoration: none;

        .username {
            text-decoration: underline;
        }
    }
}

a.award,
a.publication {
    @include relative-font-size(1.15);
    font-weight: bold;
}

a.classname {
    @include relative-font-size(1.15);
    font-weight: bold;
}

@media screen and (max-width: $on-laptop) {

    a.award,
    a.publication {
        @include relative-font-size(1.15);
        font-weight: bold;
    }

    a.classname {
        @include relative-font-size(1.15);
        font-weight: bold;
    }

}
/* ... */

